@@ -3,6 +3,8 @@ Revision history for Perl module Alien::SDL
 NEXT
      - new Win64 binaries [kmx]
      - new repo URL http://github.com/PerlGameDev/Alien-SDL [kmx]
+     - Output of header testing is a one-liner now #203 [FROGGS]
+     - Removed SDL_net from build system as it isnt needed [FROGGS]
 
 1.413  Fri Aug 06 2010
      - Searching for lib<xxx>.dll.a libs (cygwin needs this) [kmx]
